[package]
name = "restore_together"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.2.0"
nft = { path = "./nft" }
main = { path = "./main" }

[dev-dependencies]
near-sdk-sim = "3.1.0"

[workspace]
members = ["main", "nft"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
